# woundcompute

./: .gitignore  README.md  pyproject.toml  quality.sh
.github/workflows/: tests.yml
src/woundcompute/: compute_values.py  file_management.py  image_analysis.py  post_process.py  segmentation.py  texture_tracking.py  warnings_handler.py
tests/: test_compute_values.py  test_file_management.py  test_image_analysis.py  test_post_process.py  test_segmentation.py  test_texture_tracking.py  test_warnings_handler.py
tests/files/test_NikonEclipse_Evolve512_10X/: test_zoom.yaml
tests/files/test_NikonEclipse_Evolve512_10X/ph1_images/: 0001.TIF  0002.TIF  0003.TIF  0004.TIF
tests/files/test_ai_bi_together/: wc_dataset_ph1.yaml
tests/files/test_alt_broken/: test_bf_mini_movie.yaml
tests/files/test_alt_broken/brightfield_images/: 0000.TIF  0001.TIF  0002.TIF  0004.TIF  0005.TIF  0006.TIF  0007.TIF  0008.TIF  0009.TIF  0010.TIF
tests/files/test_before_seeding/: test_before_seeding.yaml
tests/files/test_brightfield_movie_mini/: 0005.TIF
tests/files/test_dic_mini_movie/: test_dic_mini_movie.yaml
tests/files/test_gfp_movie_mini/: 0020.TIF
tests/files/test_gfp_movie_mini_Anish/: run1_w2GFP_s1_t049.TIF  run1_w2GFP_s2_t047.TIF  run1_w2GFP_s3_t046.TIF  run1_w2GFP_s4_t044.TIF  run1_w2GFP_s5_t040.TIF  run1_w2GFP_s6_t049.TIF
tests/files/test_io/: bad_keys.yaml  bad_load.yaml  test_save_numpy_00000.npy  test_save_numpy_00001.npy  test_save_numpy_00002.npy  test_single.yaml  wrong_file_type.txt  wrong_version.yaml
tests/files/test_io/all_false/: all_false.yaml
tests/files/test_mini_movie/: test_mini_movie.yaml
tests/files/test_mini_movie_closing/: test_bf_mini_movie_closing.yaml
tests/files/test_ph1_mini_movie/: test_ph1_mini_movie.yaml
tests/files/test_ph1_mini_movie_closed/: test_ph1_mini_movie.yaml
tests/files/test_ph1_movie_mini_Anish/: test_ph1_mini_movie.yaml
tests/files/test_ph1_movie_mini_large_bg_shift/: test_ph1_movie_mini_large_bg_shift.yaml
tests/files/test_phi_many_examples/: test_ph1_mini_movie.yaml
tests/files/test_phi_many_examples_Anish/: test_ph1_mini_movie.yaml
tests/files/test_phi_movie_mini_Anish_tracking/: test_ph1_mini_movie_with_tracking.yaml
tests/files/test_pillar_tracking/: test_ph1_mini_movie.yaml
tests/files/test_pillar_tracking_no_tissue/: test_ph1_mini_movie.yaml
tests/files/test_single/: test_single.yaml
tests/files/test_spectra/: series_04_ch1_0000.tif  series_04_ch1_0037.tif  series_07_ch1_0003.tif  series_07_ch1_0090.tif  series_09_ch1_0044.tif  series_09_ch1_0047.tif
tests/files/test_width_challenge_Anish/: test_ph1_mini_movie.yaml
tests/files/test_wound_challenge_Anish/: test_ph1_mini_movie.yaml
tests/files/test_yaml_read/: bad_keys.yaml  bad_load.yaml  wrong_version.yaml
tests/files/test_zoom/: zoom.yaml
tests/files/test_zoom_is_closed/: zoom.yaml
tests/files/test_zoom_orig_compare/: zoom.yaml
tutorials/: run_code_on_dataset_tutorial.py  run_code_tutorial.py
tutorials/files/test_movie/: test_movie.yaml
(+312 files in other folders)
