[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "woundcompute"
version = "0.0.0"
authors = [
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "woundcompute workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs==22.1.0",
    "coverage==6.4.4",
    "cycler==0.11.0",
    "flake8",
    "fonttools==4.37.1",
    "imageio==2.21.2",
    "importlib-metadata==4.12.0",
    "iniconfig==1.1.1",
    "kiwisolver==1.4.4",
    "matplotlib==3.5.3",
    "mccabe",
    "networkx==2.8.6",
    "numpy==1.23.2",
    "opencv-python==4.6.0.66",
    "packaging==21.3",
    "Pillow==9.2.0",
    "pluggy==1.0.0",
    "py==1.11.0",
    "pycodestyle",
    "pyflakes",
    "pyparsing==3.0.9",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "python-dateutil==2.8.2",
    "PyWavelets==1.3.0",
    "PyYAML==6.0",
    "scikit-image==0.19.3",
    "scipy==1.9.1",
    "six==1.16.0",
    "tifffile==2022.8.12",
    "tomli==2.0.1",
    "zipp",
]

[project.urls]
"Homepage" = "https://github.com/elejeune11/woundcompute"
"Bug Tracker" = "https://github.com/elejeune11/woundcompute/issues"
